# chain-of-verification

./: README.md  main.py  prompts.py  pyproject.toml
cove/: __init__.py
